Fix alignment of comment vote buttons

--- a/res/style.scss
+++ b/res/style.scss
@@ -71,6 +71,7 @@
 
     & .info {
         display: inline-block;
+        margin-left: 15px;
     }
 
     & .tagline {
@@ -99,7 +100,7 @@
     }
 
     & .vote {
-        display: inline-block;
+        float: left;
         vertical-align: top;
 
         & .arrow {
@@ -145,12 +146,9 @@
             text-align: center;
             font-weight: bold;
             font-size: small;
-            padding-bottom: 5px;
+            padding-top: 3px;
+            padding-bottom: 3px;
         }
-    }
-
-    & .at_commentmain {
-        display: inline-block;
     }
 
     & article {
@@ -163,6 +161,7 @@
         & .info {
             font-size: x-small;
             padding-bottom: 5px;
+            margin-left: 0;
             text-align: center;
             color: #a2a2a2;
         }
@@ -183,6 +182,15 @@
                 padding: 0 2px 0 2px;
                 border-radius: 3px;
                 background-color: #0055DF
+            }
+        }
+
+        & .vote {
+            margin-top: 5px;
+
+            & .arrow {
+                padding-top: 3px;
+                padding-bottom: 3px;
             }
         }
 
@@ -216,6 +224,10 @@
         border: 1px solid #ddd;
         border-radius: 2px;
     }
+}
+
+.at_commentmain {
+    margin-left: 20px;
 }
 
 .at_tab {
